# prometheus-v8pro

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
config/: prometheus.yaml
src/prometheus_v8/: __init__.py  config.py  events.py  schema.py
src/prometheus_v8/adapters/: __init__.py  evo_bus.py  hermes_llm.py  hermes_plugin.py  minerva_import.py  mnemosyne.py  orchestrator.py
src/prometheus_v8/agents/: descriptor.py
src/prometheus_v8/communication/: __init__.py  bus.py  registry.py  router.py
src/prometheus_v8/core/: __init__.py  ast_mutator.py  bridge.py  compression.py  direction_selector.py  embedder.py  event_writer.py  graph.py  hybrid_search.py  ontology_generator.py  persistence.py  retry.py  store.py  synonyms.py  understanding.py  vector.py
src/prometheus_v8/evolution/: __init__.py  anti_evolution.py  checkpoint.py  coral_heartbeat.py  crossover.py  direction_selector.py  embedder.py  engine.py  evolution_loop.py  evolution_memory.py  fitness.py  goal_system.py  guided.py  harness.py  parallel.py  quota.py  reasoning_budget.py  versioned_resource.py
src/prometheus_v8/governance/: __init__.py  autonomy.py  broadcast.py  curiosity.py  initiative.py  trust.py
src/prometheus_v8/knowledge/: layer.py
src/prometheus_v8/lifecycle/: __init__.py  aging.py  consolidation.py  daily_learning.py  dream.py  dual_track.py  metabolism.py  moat.py  persona.py  weibull.py
src/prometheus_v8/monitor/: __init__.py  anomaly.py  heartbeat.py  kpi.py  manager.py  prediction.py
src/prometheus_v8/organs/: __init__.py  base.py  bridge.py  darwin.py  (+5 more)
tests/: conftest.py  test_adapters.py  test_agents.py  test_communication.py  test_config.py  test_deep.py  test_evolution.py  test_governance.py  test_integration.py  test_knowledge.py  test_lifecycle.py  test_mirofish_mechanisms.py  test_monitor.py  test_new_modules.py  test_organs.py  test_safety.py  test_safety_extra.py  test_schema.py  test_services.py  test_store.py  test_visualization.py
(+14 files in other folders)
