[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-v8"
version = "8.0.0"
description = "Prometheus V8 - Self-Evolving AI Agent Memory Platform (7-Generation Fusion)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Prometheus Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
    "orjson>=3.10",
    "msgpack>=1.0",
    "xxhash>=3.0",
    "sentence-transformers>=2.6",
    "fastmcp>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
faiss = ["faiss-cpu>=1.8"]
lancedb = ["lancedb>=0.6"]
kuzu = ["kuzu>=0.4"]
falkordb = ["falkordb>=1.0"]
igraph = ["python-igraph>=0.11", "leidenalg>=0.10"]
treesitter = ["tree-sitter>=0.22", "tree-sitter-languages>=1.10"]
monitoring = ["prometheus-client>=0.20"]
docker = ["docker>=7.0"]
hnswlib = ["hnswlib>=0.8"]
sqlitevec = ["sqlite-vec>=0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
prometheus = "prometheus_v8.services.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prometheus_v8"]
